# ZadanieTestoweOpengl

src/: CMakeLists.txt  Line.cpp  Line.hpp  main.cpp
